Documentation defined, styles insered and some alterations on html file.

--- a/wellcome.html
+++ b/wellcome.html
@@ -5,11 +5,19 @@
         <title>Bem vindo</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
 
     <body>
         <h1>Bem vindo à Calculadora</h1>
-        <p>Todas os seus cálculos do ensino médio em um só lugar.</p>
+        <p>Todos os seus cálculos do ensino médio em um só lugar.</p>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mollis velit ut metus venenatis, ut ultrices quam ultricies. Etiam varius tortor nibh, non lobortis enim ultricies ac. Mauris venenatis consequat hendrerit. Vestibulum vel gravida nunc. Fusce quis mi congue dolor posuere pulvinar a in nisl. Phasellus cursus et ante nec venenatis. Sed iaculis tempus orci, id luctus justo tristique ac. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla rutrum urna sed odio posuere, vitae scelerisque mauris eleifend. Duis id feugiat enim. Sed pulvinar blandit nisi, id eleifend elit aliquet sed.
+            <br>
+            Nam sollicitudin ipsum eget maximus vehicula. Phasellus hendrerit risus at velit mattis rhoncus. Nam volutpat neque leo, quis rhoncus justo lacinia id. Curabitur arcu massa, efficitur sit amet diam id, commodo sodales erat. Sed nulla ex, mollis eu semper quis, blandit quis ex. Curabitur sit amet erat non tellus finibus convallis eget eu augue. Nulla facilisi.
+        </p>
 
         <button>Iniciar cálculos</button>
         <a href="calc.html">Calculadora</a>
