--- a/calc.html
+++ b/calc.html
@@ -5,10 +5,43 @@
         <title>Calculando</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
 
     <body>
-        <p>Aqui ficará a interface gráfica da calculadora.</p>
+        <header>
+            <h1>Calculadora do Ensino Médio</h1>
+        </header>
+
+        <div class="container">
+            <div id="calc">
+                    <div class="presentation">
+                        <label id="view">0</label>
+                    </div>
+
+                    <div class="numbers">
+                        <button>0</button>
+                        <button class="coluna-1">1</button>
+                        <button class="coluna-1">2</button>
+                        <button class="coluna-1">3</button>
+                        <button class="coluna-2">4</button>
+                        <button class="coluna-2">5</button>
+                        <button class="coluna-2">6</button>
+                        <button class="coluna-3">7</button>
+                        <button class="coluna-3">8</button>
+                        <button class="coluna-3">9</button>
+                    </div>
+
+                    <div class="operators">
+                        <button>+</button>
+                        <button>-</button>
+                        <button>x</button>
+                        <button>/</button>
+                        <button>%</button>
+                        <button>=</button>
+                    </div>
+            </div>
+        </div>
     </body>
 
 </html>
